[package]
name = "rm_rf"
version = "0.2.2"
description = "Force-remove file or directory"
authors = ["Vasili Novikov <n1dr+cm3513git@ya.ru>"]
license="MIT OR Apache-2.0 OR CC0-1.0"
keywords = ["filesystem", "rm", "remove"]
readme = "README.md"
repository = "https://github.com/vn971/rm_rf"


[profile.release]
lto = true

[dependencies]
stacker = "0.1"
