[package]
name = "rm_rf"
version = "0.3.0"
description = "Remove directory (--force)"
authors = ["Vasili Novikov <n1dr+cm3513git@ya.ru>"]
license="MIT OR Apache-2.0 OR CC0-1.0"
edition = "2018"
keywords = ["filesystem", "rm", "remove"]
readme = "README.md"
repository = "https://github.com/vn971/rm_rf"


[profile.release]
lto = true

[dependencies]
stacker = "0.1.6"
